# pyohio-static-website

./: .envrc  .gitignore  .gitmodules  .prettierignore  .prettierrc  .projectroot  2019-03-30-pyohio-cfp-open.json  CODE_OF_CONDUCT.md  CONTENT_TODOS.md  LICENSE  README.md  about.json  example-2.json  gatsby-config.js  gatsby-node.js  gold-example.json  home.json  justfile  netlify.toml  package-lock.json  package.json  package.json.2019  sponsorship.json
.github/workflows/: pretalx.yml  scheduled.yml  sponsors.yml  update-individual-sponsors.yml  update-sponsors.yml
2023/: .prettierignore  astro.config.mjs  package.json
2023-temp/: astro.config.mjs
2023/src/: config.yaml
2024/: .gitignore  astro.config.mjs  package.json  tsconfig.json
2025/: README.md  astro.config.mjs  package.json
2025/scripts/: update_dynamic_content.py
2025/src/: content.config.mjs
2026/: README.md  index.html  index.md  og-preview.html  og-screenshot.mjs  pretalx.toml  rockgarden.toml
2026/_og-templates/: speaker.html  talk.html
2026/_slide-templates/: _preview.html  title.html  video-frame.html
2026/about/: health-and-safety.md
2026/content/: index.md  support.md
blog/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
blog/src/: config.ts  consts.ts
content/pages/: 404.mdx  index.mdx
data/speakers/: aakanksha-chouhan.yaml  alex-zharichenko.yaml  aly-sivji.yaml  amanda-quint.yaml  anand-s.yaml  anay-pant.yaml  andrew-collier.yaml  cadey.yaml  (+83 more)
netlify-static/: 404.html  _redirects  robots.txt  sitemap-archives.xml  sitemap.xml  status.html
plans/: structured-data-followups.md
pyohio-cli/: pyproject.toml
pyohio-cli/src/pyohio_cli/: _frontmatter.py  cli.py  sponsors.py
pyohio-cli/src/pyohio_cli/csv_export/: __init__.py  __main__.py  cli.py  generator.py
pyohio-cli/src/pyohio_cli/og/: __init__.py  cli.py  generator.py  renderer.py
pyohio-cli/src/pyohio_cli/pretalx/: __init__.py  avatars.py  cli.py  client.py  config.py  processor.py  schedule.py
pyohio-cli/src/pyohio_cli/slides/: __init__.py  cli.py  generator.py  renderer.py
scripts/: .gitignore  extra_data.py  pretalx.py  pretalx2.py  pyproject.toml  requirements.txt  sponsors.py  submission_stats.py  submissions.csv
scripts/extra_content/talks/: fri-reg-open.yaml  friday-conference-closes.yaml  friday-opening-reception.yaml  open-space-1.yaml  open-space-3.yaml  saturday-registration-opens.yaml  sunday-registration-opens.yaml
static/: _redirects  status.html
(+963 files in other folders)
