[project]
name = "pyohio-cli"
version = "0.1.0"
description = "PyOhio site automation CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "ruamel.yaml>=0.18",
]

[project.scripts]
pyohio = "pyohio_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyohio_cli"]
