[project]
name = "pyohio-cli"
version = "0.1.0"
description = "PyOhio site automation CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "markdown>=3.5",
    "openpyxl>=3.1",
    "pillow>=12.3.0",
    "playwright>=1.49",
    "py-gfm>=2.0",
    "python-slugify>=8.0",
    "ruamel.yaml>=0.18",
]

[project.scripts]
pyohio = "pyohio_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyohio_cli"]
