[tool.poetry]
name = "PyOhio Scripts"
version = "0.1.0"
description = ""
authors = ["Dave Forgac <tylerdave@tylerdave.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.1"
PyYAML = "^5.4.1"
click = "^8.0.1"
python-slugify = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
