[tool.poetry]
name = "PyOhio Scripts"
version = "0.1.0"
description = ""
authors = ["Dave Forgac <tylerdave@tylerdave.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
PyYAML = "^5.4.1"
click = "^8.0.1"
python-slugify = "^5.0.2"
Markdown = "^3.3.4"
py-gfm = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
