[tool.poetry]
name = "PyOhio Scripts"
version = "0.1.0"
description = ""
authors = ["Dave Forgac <tylerdave@tylerdave.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
click = "^8.0.1"
python-slugify = "^5.0.2"
markdown = "^3.5.1"
py-gfm = "^2.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
